# RabbitEars

./: .gitattributes  .gitignore  BACKLOG.md  CMakeLists.txt  HANDOVER.md  README.md  THIRD-PARTY-NOTICES.txt  appcast-arm64.xml  appcast.xml
.github/workflows/: mac-core.yml  plugins-cache-verify.yml  windows-core.yml
Win32/: BACKLOG.md  CMakeLists.txt  HANDOVER.md  WinMain.cpp  resource.h
Win32/audio/: SpectrumTap.cpp
Win32/cli/: RabbitEarsCli.cpp
Win32/docs/: THEME_ENGINE.md
Win32/platform/: Paths.cpp  PowerPolicy.cpp  PowerPolicy.h  Updater.cpp  WakeScheduler.cpp  WakeScheduler.h
Win32/ui/: BufferMeter.cpp  BufferMeter.h  ChannelGridControl.cpp  ChannelGridControl.h  D2DSupport.h  Dialogs.cpp  Dialogs.h  EpgGuideControl.cpp  EpgGuideControl.h  MainWindow.cpp  MainWindow.h  MainWindowChrome.cpp  MainWindowCommands.cpp  MainWindowData.cpp  MainWindowDock.cpp  MainWindowInternal.h  MiniMeter.cpp  Splash.cpp  Theme.h  Tr.h  VlcEngine.cpp  VlcEngine.h  VlcPlayer.cpp  VlcPlayer.h
Win32/ui/skin/: SkinDevice.cpp  SkinDevice.h  SkinStrip.cpp  SkinStrip.h  bin2h.cmake
Win32/ui/skin/shaders/: underglow.hlsl
cmake/: AppVersion.cmake  LibVlc.cmake
common/: CMakeLists.txt  version.h.in
common/core/: Gzip.cpp  Gzip.h  M3uWriter.cpp  M3uWriter.h  PowerPolicy.cpp  PowerPolicy.h  RecordingRules.cpp  RecordingRules.h  RecordingScheduler.cpp  RecordingScheduler.h  Strings.cpp  Strings.h  XmltvParser.cpp  XmltvParser.h
common/db/: Database.cpp  Database.h
common/i18n/: README.md  en.json  ja.json  keys.json  languages.json  zh-HK.json  zh-Hant.json
common/models/: Channel.h  FlowStats.h  Playlist.h  Programme.h  RecordingRule.h  ScheduledRecording.h
common/platform/: Encoding.h  Updater.h
common/ui/: DockLayout.h  Skin.cpp  Skin.h  VideoGrid.cpp  VideoGrid.h
docs/: MACOS_PORT.md  MACOS_PORT_REVIEW.md  RELEASING.md  SKIN_MODEL.md  architecture.md
mac/: CMakeLists.txt  HANDOVER.md  README.md
mac/cmake/: Mac.cmake
mac/packaging/: Info.plist.in  RabbitEars.entitlements  RabbitEars.icns  appcast-mac.xml
mac/platform/: Log.mm  Paths.cpp  Updater.mm
mac/src/app/: AppDelegate.h  AppDelegate.mm  AudioLevelTap.h  AudioLevelTap.mm  CategoriesDialog.h  CategoriesDialog.mm  EpgGuideView.h  EpgGuideView.mm  LogoLoader.h  LogoLoader.mm  MainWindowController.h  MainWindowController.mm  MeterModel.cpp  MeterModel.h  MeterView.h  MeterView.mm  MetersDialog.h  MetersDialog.mm  PlaylistsDialog.h  PlaylistsDialog.mm  RecordingsWindowController.h  RecordingsWindowController.mm  SpectrumMeterView.h  SpectrumMeterView.mm  SpectrumTap.h  SpectrumTap.mm  StatMeterView.h  StatMeterView.mm  TermsDialog.h  TermsDialog.mm  Tr.h  TvGuideWindowController.h  TvGuideWindowController.mm  VlcEngineMac.h  VlcEngineMac.mm  VlcPlayerMac.h  VlcPlayerMac.mm  main.mm
mac/src/platform/: Http.mm  Log.mm  Updater.mm
mac/src/shim/: windows.h
mac/src/shim/platform/: Encoding.h
mac/src/tools/: playprobe.mm  selftest.cpp
packaging/: RabbitEars.rc  app.manifest  app.manifest.in  appcast.xml  installer.iss  version.iss.in
scripts/: build-arm64.cmd  build-installer.cmd  build-mac.sh  build.cmd  make-appcast.ps1  make-icns.py  make_ico.py  package-mac.sh  sign-release.sh  xcode.sh
src/: WinMain.cpp  resource.h  version.h.in
src/audio/: SpectrumTap.cpp  SpectrumTap.h
src/cli/: RabbitEarsCli.cpp
src/core/: Http.cpp  Http.h  M3uParser.cpp  M3uParser.h
src/db/: Database.cpp  Database.h
src/models/: ParsedChannel.h
src/platform/: Encoding.h  Log.cpp  Log.h  Updater.cpp  Updater.h
src/platform/mac/: Http.mm  Paths.cpp  Updater.mm
src/platform/win/: Http.cpp  Paths.cpp
src/ui/: BufferMeter.cpp  BufferMeter.h  ChannelGridControl.cpp  ChannelGridControl.h  Dialogs.cpp  Dialogs.h  DockLayout.cpp  DockLayout.h  MainWindow.cpp  MainWindow.h  MiniMeter.cpp  MiniMeter.h  Splash.cpp  Splash.h  Theme.h  VlcPlayer.cpp  VlcPlayer.h
tools/i18n/: gen_i18n.py
